Add Play + Slick project scaffold
Convert repository into a Play Framework app with Slick/Postgres support. Enables Play plugin in build.sbt, sets scalaVersion, adds dependencies (play-slick, evolutions, postgres, test libs), Java options and fork settings, and updates sbt version. Adds application files: HealthController endpoint, User model and Slick UserTable, and UserRepository for DB access. Adds Play config and tooling: conf/application.conf, conf/routes (/health), SQL evolution to create/seed users table, .gitignore updates, .sbtopts, .scalafmt.conf, VSCode settings, and project plugin/metals files.